# llm-mux

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.yaml
.opencode/commands/: bmad-brainstorming.md  bmad-create-architecture.md  bmad-investigate.md  bmad-party-mode.md  bmad-prfaq.md  bmad-tea.md  bmad-teach-me-testing.md  bmad-testarch-atdd.md  bmad-testarch-automate.md  bmad-testarch-ci.md  bmad-testarch-framework.md  bmad-testarch-nfr.md  bmad-testarch-test-design.md  bmad-testarch-test-review.md  bmad-testarch-trace.md  speckit.clarify.md  speckit.plan.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/extensions/git/: git-config.yml
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/investigations/: epic1-implementation-verification-investigation.md  ir-layer-investigation.md
_bmad-output/planning-artifacts/: architecture.md  epics.md
_bmad-output/planning-artifacts/prds/prd-llm-mux-2026-05-29/: .decision-log.md  prd.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
crates/adapters/anthropic/: Cargo.toml
crates/adapters/anthropic/src/messages/: adapter.rs  convert.rs  mod.rs
crates/adapters/anthropic/tests/: messages_tests.rs
crates/adapters/openai/: Cargo.toml
crates/adapters/openai-resp/: Cargo.toml
crates/adapters/openai-resp/src/: lib.rs
crates/adapters/openai-resp/src/responses/: adapter.rs  convert.rs  encode.rs  mod.rs
crates/adapters/openai/src/chat/: adapter.rs  convert.rs  encode.rs  mod.rs
crates/adapters/openai/tests/: chat_tests.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  codec.rs  ir.rs  lib.rs  types.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  lib.rs  main.rs  server.rs
crates/gateway/src/handlers/: genai_bridge.rs  mod.rs
crates/gateway/tests/: cross_protocol_tests.rs  e2e_test.rs  streaming_tests.rs
crates/llm-mux-codecs/anthropic/: Cargo.toml
crates/llm-mux-codecs/anthropic/src/: lib.rs  messages.rs  models.rs
crates/llm-mux-codecs/anthropic/tests/: messages_tests.rs
crates/llm-mux-codecs/openai/: Cargo.toml
crates/llm-mux-codecs/openai-chat/: Cargo.toml
crates/llm-mux-codecs/openai-chat/src/: chat.rs  lib.rs  models.rs
crates/llm-mux-codecs/openai-responses/: Cargo.toml
crates/llm-mux-codecs/openai-responses/src/: models.rs  responses.rs
crates/llm-mux-codecs/openai/src/: chat.rs  models.rs
crates/llm-mux-codecs/openai/tests/: chat_tests.rs
crates/llm-mux-core/: Cargo.toml
crates/llm-mux-core/src/: codec.rs  ir.rs  lib.rs
crates/llm-mux-core/tests/: ir_tests.rs
crates/llm-mux-gateway/: Cargo.toml
crates/llm-mux-gateway/src/: config.rs  handlers.rs  lib.rs  middleware.rs  server.rs  sse.rs
crates/llm-mux-gateway/tests/: cross_protocol_tests.rs  e2e_test.rs  streaming_tests.rs
docs/: api-comparison-report.md  dev-setup.md  index.md  openai-responses-api.md  project-scan-report.json  reference-projects.md  rust-genai-compatibility-report.md  source-tree-analysis.md
docs/api/: api-contracts-gateway.md
docs/architecture/: architecture-gateway.md
docs/development/: development-guide-gateway.md
docs/operations/: deployment-guide.md
docs/overview/: project-overview.md
docs/reference/: anthropic-messages-api.md  openai-chat-completions-api.md
specs/001-tri-protocol-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tri-protocol-gateway/checklists/: performance.md  protocol-fidelity.md  requirements.md
specs/001-tri-protocol-gateway/contracts/: cli.md  http-api.md
specs/002-complex-integration-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-complex-integration-tests/checklists/: requirements.md
specs/003-genai-adapter-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-genai-adapter-refactor/checklists/: requirements.md
specs/003-genai-adapter-refactor/contracts/: adapter-trait.md
tests/: cross_protocol_tests.rs
tests/fixtures/: claude_response.json  claude_simple_request.json
