[workspace]
resolver = "2"
members = [
    "crates/llm-mux-core",
    "crates/llm-mux-server",
    "crates/llm-mux-codecs/openai",
    "crates/llm-mux-codecs/anthropic",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/W/llm-mux"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

# internal
llm-mux-core = { path = "crates/llm-mux-core" }
openai-codec = { path = "crates/llm-mux-codecs/openai" }
anthropic-codec = { path = "crates/llm-mux-codecs/anthropic" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
