[workspace]
resolver = "2"
members = [
    "crates/llm-mux-core",
    "crates/llm-mux-gateway",
    "crates/llm-mux-codecs/openai-chat",
    "crates/llm-mux-codecs/anthropic",
    "crates/llm-mux-codecs/openai-responses",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/W/llm-mux"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "v7"] }
reqwest = { version = "0.12", features = ["stream", "json"] }

# internal
llm-mux-core = { path = "crates/llm-mux-core" }
openai-chat-codec = { path = "crates/llm-mux-codecs/openai-chat" }
anthropic-codec = { path = "crates/llm-mux-codecs/anthropic" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
