[package]
name = "llm-mux-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "llm-mux"
path = "src/main.rs"

[dependencies]
llm-mux-core.workspace = true
openai-chat-codec.workspace = true
anthropic-codec.workspace = true
openai-responses-codec.workspace = true
genai.workspace = true
axum.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures = "0.3"
tokio-stream = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
integration = []
